--- a/business/templates/checkout/stripeCheckout.html
+++ b/business/templates/checkout/stripeCheckout.html
@@ -125,6 +125,7 @@
                             <thead class="thead-light">
                             <tr>
                                 <th>Name</th>
+                                <th>Quantity</th>
                                 <th>Price</th>
                                 <th style="width: 1%;">Remove</th>
                             </tr>
@@ -132,6 +133,7 @@
                             {% for product in products %}
                                 <tr class="bg-white">
                                     <td>{{ product.name }}</td>
+                                    <td>{{ product.quantity }}</td>
                                     <td>${{ product.price_amount }}</td>
                                     <td>
                                         <form action="{% url "business:delete_item" %}" method="post">{% csrf_token %}
@@ -142,7 +144,7 @@
                                 </tr>
                             {% endfor %}
                             <tr class="bg-white">
-                                <td class="text-right border-0">Total:</td>
+                                <td class="text-right border-0" colspan="2">Total:</td>
                                 <td>${{ amount }}</td>
                                 <td class="border-0"></td>
                             </tr>
