--- a/business/templates/userData/BusinessCreditSteps.html
+++ b/business/templates/userData/BusinessCreditSteps.html
@@ -60,7 +60,7 @@
                                         </div>
                                         <div>
                                             <input type="checkbox" name="fax_number" id="fax_number">
-                                            <label for="fax_number">Fax Number: $40 USD - monthly</label>
+                                            <label for="fax_number">Fax Number: $20 USD - monthly</label>
                                         </div>
 
                                         <div>
@@ -129,8 +129,15 @@
                                         <div style="height: 1px; background-color: black" class="mt-3"></div>
                                         <div class="text-center mb-2 font-weight-bold">
                                             Need All The Steps? Get 13% Off The Monthly Package With Our Business
-                                            Builder
-                                            Program
+                                            Builder Program
+                                        </div>
+                                        <div class="mb-2" style="font-size: 12px">
+                                            &#8226; 60 days free on our accounting and payroll software <br>
+                                            &#8226; 10% off our special auto dialer software that can do sms texting and
+                                            voice broadcasting to grow your business for 60 days<br>
+                                            &#8226; Free Access to our data platform that helps you get and export
+                                            100,000 leads for 60 days<br>
+                                            <a href="#">Watch video to explain bonuses</a>
                                         </div>
                                         <div class="text-center ">
                                             <div class="btn btn-primary">
@@ -157,8 +164,6 @@
                                             <input type="checkbox" name="fax_number_year" id="fax_number_year">
                                             <label for="fax_number_year">Fax Number: $240 USD - yearly</label>
                                         </div>
-
-
                                         <div>
                                             <input type="checkbox" name="professional_email_address_year"
                                                    id="professional_email_year">
@@ -226,6 +231,18 @@
                                             Need All The Steps? Get The Business Builder Annual Program for $999 and
                                             save
                                             $50
+                                        </div>
+                                        <div class="mb-2" style="font-size: 12px">
+
+
+                                            &#8226; 1 year free on our accounting and payroll software<br>
+                                            &#8226; 50% off our special auto dialer software that can do sms texting and
+                                            voice
+                                            broadcasting to grow your business for 60 days<br>
+                                            &#8226; Free Access to our data platform that helps you get and export
+                                            100,000 leads for 120 days<br>
+                                            <a href="#">Watch video to explain bonuses</a>
+
                                         </div>
                                         <div class="text-center ">
                                             <div class="btn btn-primary">
@@ -308,7 +325,7 @@
             var prices = {
                 'website': 50,
                 'toll_free': 40,
-                'fax_number': 40,
+                'fax_number': 20,
                 'domain_year': 13.99,
                 'professional_email': 7.99,
                 'website_year': 300,
