--- a/getdinerotoday/templates/components/StylesBlock.html
+++ b/getdinerotoday/templates/components/StylesBlock.html
@@ -2,6 +2,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="apple-itunes-app" content="app-id=1520722061">
+<meta name="google-play-app" content="app-id=com.millennialbusinessbuilders.getdianotoday">
+
 <link rel="stylesheet" type="text/css" href='{% static "lib/metisMenu/metisMenu.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "lib/bootstrap/css/bootstrap.min.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "lib/vectormap/jquery-jvectormap-2.0.2.css" %}'>
@@ -12,3 +15,6 @@
 <link rel="stylesheet" type="text/css" href='{% static "lib/toast/jquery.toast.min.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "style.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "lib/jquery-ui/jquery-ui.css" %}'>
+
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+
