--- a/business/templates/userData/BusinessCreditSteps.html
+++ b/business/templates/userData/BusinessCreditSteps.html
@@ -1,4 +1,3 @@
-{#{% extends "pages/base-business.html" %}#}
 {% extends request.resolver_match.page_template %}
 {% load static %}
 {% block content %}
@@ -127,11 +126,11 @@
                                         </div>
 
                                         <div style="height: 1px; background-color: black" class="mt-3"></div>
-                                        <div class="text-center mb-2 font-weight-bold">
-                                            Need All The Steps? Get 13% Off The Monthly Package With Our Business
-                                            Builder Program
+                                        <div class=" my-2">
+                                            Extra Bonuses If You Purchase All Options:
                                         </div>
                                         <div class="mb-2" style="font-size: 12px">
+
                                             &#8226; 60 days free on our accounting and payroll software <br>
                                             &#8226; 10% off our special auto dialer software that can do sms texting and
                                             voice broadcasting to grow your business for 60 days<br>
@@ -139,11 +138,17 @@
                                             100,000 leads for 60 days<br>
                                             <a href="#">Watch video to explain bonuses</a>
                                         </div>
-                                        <div class="text-center ">
-                                            <div class="btn btn-primary">
-                                                Business Builder Monthly Program
-                                            </div>
+                                        <div class="text-center mb-2 font-weight-bold">
+                                            Need All The Steps? Get The Business Builder Monthly Program for $109.99
                                         </div>
+                                        <form method="post">
+                                            <div class="text-center">
+                                                <input type="hidden" value="on" name="business_builder_program">
+                                            <button class="btn btn-primary">
+                                                Get Business Builder Monthly Program
+                                            </button>
+                                        </div>
+                                        </form>
 
                                     </div>
                                 </div>
@@ -227,10 +232,8 @@
 
 
                                         <div style="height: 1px; background-color: black" class="mt-3"></div>
-                                        <div class="text-center mb-2 font-weight-bold">
-                                            Need All The Steps? Get The Business Builder Annual Program for $999 and
-                                            save
-                                            $50
+                                        <div class=" my-2">
+                                            Extra Bonuses If You Purchase All Options:
                                         </div>
                                         <div class="mb-2" style="font-size: 12px">
 
@@ -244,11 +247,28 @@
                                             <a href="#">Watch video to explain bonuses</a>
 
                                         </div>
-                                        <div class="text-center ">
-                                            <div class="btn btn-primary">
-                                                Business Builder Annual Program
-                                            </div>
+                                        <div class="text-center mb-2 font-weight-bold">
+                                            Need All The Steps? Get The Business Builder Annual Program for $999 and
+                                            save $50
                                         </div>
+                                        <div class="text-center ">
+
+                                            <a class="btn btn-primary"
+                                               href="https://millennialsbuildinggreatness.com/products/business-builders-annual-package">
+                                                Get Business Builder Annual Program
+                                            </a>
+                                        </div>
+                                        <div class="text-center ">
+                                            <br>
+                                            Want To Get Started With No Money Down?
+                                            <a class="btn btn-primary"
+                                               href="{% url "business:upgrade" %}">
+                                                See If You Can Be Approved For
+                                                Financing<br> With 12-36 Month Payment Options
+                                            </a>
+                                        </div>
+
+
                                     </div>
                                 </div>
                             </div>
@@ -256,13 +276,6 @@
                             <div class="row justify-content-center">
                                 <div class="col text-center mt-4" id="stripe-form">
                                     <div>Total: $<span id="total_amount">0</span></div>
-                                    {#                            <script src="https://checkout.stripe.com/checkout.js"#}
-                                    {#                                    class="stripe-button"#}
-                                    {#                                    data-key="{{ stripe_key }}"#}
-                                    {#                                    data-description="Business Credit Building Steps"#}
-                                    {#                                    data-amount=""#}
-                                    {#                                    data-locale="auto">#}
-                                    {#                            </script>#}
                                     <button type="submit" class="btn btn-primary">Proceed to checkout</button>
                                 </div>
 
@@ -327,6 +340,7 @@
                 'toll_free': 40,
                 'fax_number': 20,
                 'domain_year': 13.99,
+                'domain': 13.99,
                 'professional_email': 7.99,
                 'website_year': 300,
                 'toll_free_year': 420,
